network_policy/default_network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata: 
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
